--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,48 +18,55 @@
     name: '{{item}}'
     state: present
 
-- name: download tgz
+- name: check for install...
   become: yes
-  become_user: root
-  get_url:
-    url: '{{redis_tgz_url}}'
-    checksum: '{{redis_checksum}}'
-    dest: /tmp/{{redis_tgz}}
-    mode: 0644
+  stat:
+    path: /usr/local/bin/redis-server
+  changed_when: False
+  register: redis_binary
+- when: not redis_binary.stat.exists
+  block:
+    - name: download tgz
+      become: yes
+      become_user: root
+      get_url:
+        url: '{{redis_tgz_url}}'
+        checksum: '{{redis_checksum}}'
+        dest: /tmp/{{redis_tgz}}
+        mode: 0644
 
-- name: unarchive...
-  become: yes
-  become_user: root
-  unarchive:
-    remote_src: yes
-    src: /tmp/{{redis_tgz}}
-    dest: '{{redis_parent_src_dir}}'
-    creates: '{{redis_src_dir}}'
+    - name: unarchive...
+      become: yes
+      become_user: root
+      unarchive:
+        remote_src: yes
+        src: /tmp/{{redis_tgz}}
+        dest: '{{redis_parent_src_dir}}'
+        creates: '{{redis_src_dir}}'
 
-- name: make...
-  become: yes
-  become_user: root
-  command: make
-  args:
-    chdir: '{{redis_src_dir}}'
-    creates: '{{redis_src_dir}}/src/redis-server'
+    - name: make...
+      become: yes
+      become_user: root
+      command: make
+      args:
+        chdir: '{{redis_src_dir}}'
+        creates: '{{redis_src_dir}}/src/redis-server'
 
-- name: install...
-  become: yes
-  become_user: root
-  command: make install
-  args:
-    chdir: '{{redis_src_dir}}'
-    creates: /usr/local/bin/redis-server
-
-- name: cleanup
-  become: yes
-  become_user: root
-  when: redis_install_cleanup
-  with_items:
-    - '{{redis_src_dir}}'
-    - /tmp/{{redis_tgz}}
-  file:
-    path: '{{item}}'
-    state: absent
+    - name: install...
+      become: yes
+      become_user: root
+      command: make install
+      args:
+        chdir: '{{redis_src_dir}}'
+        creates: /usr/local/bin/redis-server
+  always:
+    - name: cleanup
+      become: yes
+      become_user: root
+      with_items:
+        - '{{redis_src_dir}}'
+        - /tmp/{{redis_tgz}}
+      file:
+        path: '{{item}}'
+        state: absent
     
