drop centos_7 and archlinux_latest CIs

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -15,17 +15,18 @@ galaxy_info:
   platforms:
   - name: EL
     versions:
-    - all
+    - 8
   - name: Fedora
     versions:
     - all
   - name: Debian
     versions:
-    - jessie
+    - buster
     - stretch
   - name: Ubuntu
     versions:
-    - all
+    - bionic
+    - xenial
   - name: Alpine
     versions:
     - all
