--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
 - OS=alpine_edge
 - OS=archlinux_latest
 - OS=centos_8
+- OS=debian_bullseye
 - OS=debian_buster
 - OS=debian_stretch
 - OS=fedora_31
