--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,9 +2,9 @@
 # vars file for redis
 redis_name: redis-{{ redis_ver }}
 redis_tgz: '{{ redis_name }}.tar.gz'
+redis_tmp_tgz: /tmp/{{ redis_tgz }}
 
 redis_tgz_url: '{{ redis_mirror }}/{{ redis_tgz }}'
-
 redis_src_dir: '{{ redis_parent_src_dir }}/{{ redis_name }}'
-
 redis_checksum: '{{ redis_checksums[redis_ver] }}'
+redis_install_exe: /usr/local/bin/redis-server
