--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,8 +1,7 @@
+---
 dependencies:
-- role: andrewrothstein.unarchive-deps
-  version: v1.2.1
-- role: andrewrothstein.gcc-toolbox
-  version: v1.1.3
+- andrewrothstein.unarchive-deps
+- andrewrothstein.gcc-toolbox
 galaxy_info:
   author: Andrew Rothstein
   company: BlackRock
@@ -28,7 +27,8 @@ galaxy_info:
     - 8
   - name: Fedora
     versions:
-    - 34
+    - 35
+    - 36
   - name: Ubuntu
     versions:
     - bionic
