--- a/meta/requirements.yml
+++ b/meta/requirements.yml
@@ -1,5 +1,5 @@
 ---
-- name: andrewrothstein.unarchive-deps
-  version: v1.2.4
-- name: andrewrothstein.gcc-toolbox
-  version: v1.1.9
+- name: andrewrothstein.unarchivedeps
+  version: 3.0.2
+- name: andrewrothstein.gcc_toolbox
+  version: 2.0.5
