--- a/test.yml
+++ b/test.yml
@@ -1,10 +1,13 @@
 ---
-- hosts: all
+- name: Testing andrewrothstein.redis
+  hosts: all
   roles:
     - role: '{{ playbook_dir }}'
   tasks:
-    - command: /usr/local/bin/redis-server --version
+    - name: Executing 'redis-server --version'
+      ansible.builtin.command: /usr/local/bin/redis-server --version
+      changed_when: false
       register: redis_test_output
-    - name: redis-server --version
-      debug:
+    - name: Output from 'redis-server --version'
+      ansible.builtin.debug:
         msg: '{{ redis_test_output.stdout }}'
